# learn-jax

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  build.bat  build.sh  clean.sh  conda-lock.yml  environment.yml  find-files.sh  functions.sh  init.sh  install.sh  install_from_local.sh  lock.sh  pyproject.toml  run_all.sh  test-conda.sh  test-local.sh
conda.recipe/: meta.yaml
src/learn_jax/: __init__.py  jmjax.py
tests/: test_dummy.py  test_jmjax.py  test_simple.py
