[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs>=0.3", "setuptools-scm>=7.1"]

[project]
authors = [
  {name = "Jon Moore", email = "jonmoore@example.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  # package requirements go here
  "jax"
]
description = "Materials for learning JAX"
dynamic = ["version"]
license = {text = "MIT"}
name = "learn_jax"
readme = "README.rst"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "mypy"
]

[project.urls]
repository = "https://github.com/jonmoore/learn-jax"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
  "if\\s+(typing\\.)?TYPE_CHECKING:",
  'if __name__ == "__main__":'
]
omit = [
  "src/learn_jax/__main__.py",
  "src/learn_jax/_version.py",
  "tests/*"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.hooks.vcs]
version-file = "src/learn_jax/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src/learn_jax",
  "/pyproject.toml"
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
disallow_untyped_defs = true
files = ["src/learn_jax/**/*.py"]
python_version = "3.12"
warn_no_return = true

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "--color=yes",
  "--cov-append",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov=learn_jax",
  "--tb=native",
  "--strict-markers",
  "--durations=20"
]
markers = [
  "serial: execute test serially (to avoid race conditions)",
  "slow: tests can take a long time (deselect with '-m \"not slow\"')"
]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe", "examples", "env", "envs", "scripts"]
